--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
 			<artifactId>consul-api</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 	</dependencies>
 </project>
