--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<consul.version>1.4.1</consul.version>
 		<fastjson.version>1.2.40</fastjson.version>
+		<ribbon.version>2.7.17</ribbon.version>
+		<okhttp.version>3.11.0</okhttp.version>
+		<httpclient.version>4.5.6</httpclient.version>
 	</properties>
 	<licenses>
 		<license>
@@ -73,6 +76,36 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.ribbon</groupId>
+			<artifactId>ribbon-loadbalancer</artifactId>
+			<version>${ribbon.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.ribbon</groupId>
+			<artifactId>ribbon-loadbalancer</artifactId>
+			<version>${ribbon.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${okhttp.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>${httpclient.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<profiles>
