--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<fastjson.version>1.2.40</fastjson.version>
 		<ribbon.version>2.7.17</ribbon.version>
 		<okhttp.version>3.11.0</okhttp.version>
+		<httpcore.version>4.4.10</httpcore.version>
 		<httpclient.version>4.5.6</httpclient.version>
 	</properties>
 	<licenses>
@@ -97,8 +98,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpmime</artifactId>
+			<artifactId>httpmime</artifactId> 
 			<version>${httpclient.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>${httpcore.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
